--- a/OrchardApp/appsettings.json
+++ b/OrchardApp/appsettings.json
@@ -14,7 +14,7 @@
           "SiteName": "Aspire DEmo",
           "SiteTimeZone": "Europe/Amsterdam",
           "AdminUsername": "amine",
-          "AdminEmail": "mostefaiamine@gmail.com",
+          "AdminEmail": "amine@somewhere.com",
           "AdminPassword": "[NOT SET]",
           "DatabaseProvider": "MySql",
           "DatabaseConnectionString": "[NOT SET]",
